--- a/style.css
+++ b/style.css
@@ -1,175 +1,180 @@
 /*Global*/
 
-* { 
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    width: 100%;
-    height: 100%;
-    background-color: #FAFAFA;
+  width: 100%;
+  height: 100%;
+  background-color: #fafafa;
 }
 
 /*Header*/
 
 header {
-    padding: 20px;
+  padding: 20px;
 }
 
 header h1 {
-    font-family: 'PT Serif', serif;
-    font-weight: 700;
-    font-size: 36px;
-    margin: 30px 0;
+  font-family: "PT Serif", serif;
+  font-weight: 700;
+  font-size: 36px;
+  margin: 30px 0;
 }
 
-h2{
-    font-family: 'Poppins', sans-serif;
-    font-weight: 600;
-    font-size: 18px;
-    margin: 10px 0;
+h2 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-size: 18px;
+  margin: 10px 0;
 }
 
 p {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
-    font-size: 14px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
 }
 
 /*Main*/
 
 main {
-    margin: 30px auto;
-    padding: 20px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 40px;
+  margin: 30px auto;
+  padding: 28px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 40px;
 }
 
 /*Grid Items*/
 
 .items {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 img {
-    width:100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 h3 {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 600;
-    font-size: 14px;
-    padding: 10px 0;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+  padding: 10px 0;
 }
 
 .image {
-    position: relative;
+  position: relative;
 }
 
 .image::after {
-    position: absolute;
-    width: fit-content;
-    transform: rotate(90deg);
-    transform-origin: 0 0;
-    margin-left: 15px;
-    font-family: 'PT Serif', serif;
-    font-weight: 400;
-    font-size: 10px;
+  position: absolute;
+  width: max-content;
+  transform: rotate(90deg);
+  transform-origin: 0 0;
+  margin-left: 28px;
+  font-family: "PT Serif", serif;
+  font-weight: 400;
+  font-size: 21px;
 }
 
 /*Individual items*/
 .item1 > .image::after {
-    content: 'Product Owner';
+  content: "Product Owner";
 }
 
 .item2 > .image::after {
-    content: 'Art Director';
+  content: "Art Director";
 }
 
 .item3 > .image::after {
-    content: 'Tech Lead';
+  content: "Tech Lead";
 }
 
 .item4 > .image::after {
-    content: 'UX Designer';
+  content: "UX Designer";
 }
 
 .item5 > .image::after {
-    content: 'Developer';
+  content: "Developer";
 }
 
 .item6 > .image::after {
-    content: 'Developer';
+  content: "Developer";
 }
 
-.item2, .item4,.item6 {
-    position: relative;
-    top:50px;
+.item2,
+.item4,
+.item6 {
+  position: relative;
+  top: 50px;
 }
 
 /*Footer*/
 
 footer {
-    margin-top:70px;
-    padding: 30px;
-    text-align: center;
+  margin-top: 70px;
+  padding: 30px;
+  text-align: center;
 }
 
 span {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 14px;
-    color: #A9A9A9;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  color: #a9a9a9;
 }
 
 /*Media Queries*/
 
-@media screen and (min-width:800px)
-{
-    header {
-        margin-top: 5%;
-        margin-bottom: 10%;
-        width: 80%;
-        margin-left: auto;
-        margin-right: auto;
-        display: flex;
-        justify-content: space-between;
-    }
+@media screen and (min-width: 800px) {
+  header {
+    margin-top: 5%;
+    margin-bottom: 10%;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: space-between;
+  }
 
-    header h1 {
-        margin: 0;
-    }
+  header h1 {
+    margin: 0;
+  }
 
-    .header__content {
-        width: 30%;
+  .header__content {
+    width: 30%;
+  }
 
-    }
+  main {
+    grid-template-columns: repeat(3, 1fr);
+    width: 80%;
+    gap: 10%;
+  }
 
-    main {
-        grid-template-columns: repeat(3,1fr);
-        width: 80%;
-        gap: 10%;
-    }
+  h3 {
+    font-size: 20px;
+  }
 
-    .item4,.item6 {
-        position: static;
-    }
+  .item4,
+  .item6 {
+    position: static;
+  }
 
-    .item5 {
-        position: relative;
-        top: 50px;
-    }
+  .item5 {
+    position: relative;
+    top: 50px;
+  }
 
-    footer {
-        margin-top: 10%;
-    }
+  footer {
+    margin-top: 10%;
+  }
 
-    .image::after {
-        margin-left: 20px;
-        font-size: 14px;
-    }
+  .image::after {
+    margin-left: 32px;
+    font-size: 24px;
+  }
 }
